# iksz

./: .gitignore  HISTORY.md  LICENSE_hu.md  README.md  pyproject.toml
.mise/: config.toml
.mise/tasks/: clean  clean-test  stats
sources/books/: core-rulebook.yaml  core-v1.0.yaml  doraddon.yaml  fegyverek.yaml  ineria.yaml  manifesto.yaml  merano.yaml  miracle.yaml  novellak.yaml  reika.yaml  terido.yaml
sources/core-v1.0/gm/: fp.md  jatekosok.md  targyak.md
sources/core-v1.0/intro/: intro.md  preface.md
sources/core-v1.0/karakter/: elony.md  fejl.md  karakter.md  kepz.md  tul.md
sources/core-v1.0/korny/: felsz.md  harc-fazis.md  harc-folyamatos.md  proba.md  seb.md
sources/core-v1.0/player/: example.md  howto.md
sources/core/gm/: fp.md  jatekosok.md  targyak.md
sources/core/intro/: intro.md  preface.md
sources/core/karakter/: elony.md  fejl.md  karakter.md  kepz.md  tul.md
sources/core/korny/: felsz.md  harc-fazis.md  harc-folyamatos.md  proba.md
sources/core/player/: example.md  howto.md
sources/doraddon/: 01-terkep.md  02-tortenet.md  03-varosok.md  04-magia.md  05-rendek.md  06-nepek.md  99-kiegeszitesek.md
sources/doraddon/intro/: authors.md  (+1 more)
sources/ineria/: fajok.md  folyt.md  terkep.md
sources/manifesto/: 00-manifesto.md
sources/merano/: 01-foldrajz.md  02-tortenet.md  03-varosok.md  04-otletek.md
sources/novellak/: ahajo.md  alomlato.md  fenyhozo-gyermek.md  knowyourenemy.md
sources/reika/: 01-haboruk.md  02-kaosz.md  03-nepek.md  04-birodalmak.md  99-fuggelek.md
sources/terido/: 01-story.md  02-technika.md
templates/: epub-metadata.xml  filter.lua  style.css  template.typ  title-page.html  typst-filter.lua
tests/: __init__.py  conftest.py  test_book.py  test_formats.py  test_integration.py  test_site.py  test_utils.py
(+45 files in other folders)
